force-app/main/default/objects/Field_Mapping__mdt/Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps logical platform field names to subscriber org field API names</description>
    <label>Field Mapping</label>
    <pluralLabel>Field Mappings</pluralLabel>
</CustomObject>