force-app/main/default/objects/Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <length>100</length>
</CustomField>