force-app/main/default/objects/Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>