force-app/main/default/objects/Field_Mapping__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Text</fullName><default>false</default><label>Text</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Picklist</fullName><default>false</default><label>Picklist</label></value>
            <value><fullName>Lookup</fullName><default>false</default><label>Lookup</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>