force-app/main/default/objects/Field_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>