force-app/main/default/objects/Field_Mapping__mdt/fields/Logical_Name__c.field-meta.xml
<CustomField>
    <fullName>Logical_Name__c</fullName>
    <label>Logical Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>